<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Navio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_arcamera">ARCameraActivity</string>
    <string name="title_activity_location_list">LocationListActivity</string>
    <string name="title_activity_translator">TranslatorActivity</string>
    <string name="title_navio_ar_camera">Navio AR Camera View</string>
    <string name="title_activity_js_to_native_data">JsToNativeData</string>
    <string name="poi_id">ID</string>
    <string name="poi_name">Name</string>
    <string name="poi_description">Description</string>
    <string name="poi_latitude">Latitude</string>
    <string name="poi_longitude">Longitude</string>

</resources>
